--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,20 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
-  <title>PatientList</title>
+  <title>Patient List Application</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="vendors/b4/css/bootstrap.min.css">
 </head>
+
 <body>
   <app-root>Loading...</app-root>
+  <script src="vendors/jquery/jquery-3.1.1.slim.min.js"></script>
+  <script src="vendors/tether/tether.min.js"></script>
+  <script src="vendors/b4/js/bootstrap.min.js"></script>
 </body>
+
 </html>
